Move postfix to litr

--- a/inventory/group_vars/all/vars.yml
+++ b/inventory/group_vars/all/vars.yml
@@ -34,6 +34,7 @@ s3_domain: "s3.{{ domains['hb'] }}"
 s3_url: "https://{{ s3_domain }}"
 minio_domain: "minio.{{ domains['hb'] }}"
 localgw_dns_name: "localgw.{{ domains['hb'] }}"
+postfix_relay_hostname: "smtp.{{ domains['hb'] }}"
 
 prometheus_blackbox_icmp_targets: ["{{ wireguard_ip | default(ansible_host) }}"]
 prometheus_node_targets: ["{{ wireguard_ip | default(ansible_host) + ':' + node_exporter_port | string }}"]
