--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -176,8 +176,8 @@ __extra_prometheus_scrape_configs:
   - job_name: "postfix"
     scrape_interval: 1m
     static_configs:
-      - targets: ["{{ hostvars['drepi'].ansible_host }}:{{ hostvars['drepi'].postfix_exporter_port }}"]
-        labels: "{{ hostvars['drepi'].prometheus_node_labels }}"
+      - targets: ["{{ hostvars['litr'].ansible_host }}:{{ hostvars['litr'].postfix_exporter_port }}"]
+        labels: "{{ hostvars['litr'].prometheus_node_labels }}"
 
   - job_name: "cadvisor"
     static_configs: "{{ __prom_cadvisor_configs }}"
