--- a/inventory/host_vars/litr/firewall.yml
+++ b/inventory/host_vars/litr/firewall.yml
@@ -7,9 +7,21 @@ firewalld_zones:
 firewalld_services:
   - name: ssh
 
+  - name: smtp
+    sources: "{{ __postfix_networks | flatten }}"
+
+  - name: smtps
+    sources: "{{ __postfix_networks | flatten }}"
+
+  - name: smtp-submission
+    sources: "{{ __postfix_networks | flatten }}"
+
 firewall_rules:
   - port: "{{ (serial_proxies | selectattr('name', 'eq', 'pwr') | first).port }}"
     source: "{{ hostvars['ha'].ansible_host }}"
+
+  - port: "{{ postfix_exporter_port }}"
+    sources: "{{ node_exporter_allow_ips }}"
 
   # NUT
   - port: 3493
@@ -18,3 +30,7 @@ firewall_rules:
   # NUT exporter
   - port: 9199
     sources: "{{ node_exporter_allow_ips }}"
+
+mt_firewall_address_lists:
+  - address: "{{ ansible_host }}"
+    list: smtp
