--- a/inventory/host_vars/rompi/wireguard.yml
+++ b/inventory/host_vars/rompi/wireguard.yml
@@ -13,7 +13,7 @@ wireguard_dns_list:
 wireguard_mt_allowed_ips:
   - "{{ hostvars['rb5009'].wireguard_ip }}/32"
   - "{{ hostvars['loki01'].ansible_host }}/32"
-  - "{{ hostvars['drepi'].ansible_host }}/32"
+  - "{{ hostvars['litr'].ansible_host }}/32"
 
 wireguard_dns: "{{ wireguard_dns_list | join(', ') }}"
 wireguard_private_key: "{{ lookup('community.general.passwordstore', 'network/' + inventory_hostname + '_wg_pk') }}"
