--- a/inventory/host_vars/drepi/mediamtx.yml
+++ b/inventory/host_vars/drepi/mediamtx.yml
@@ -8,6 +8,8 @@ mediamtx_metrics_port: 9998
 mediamtx_paths:
   cam:
     source: rpiCamera
+    rpiCameraHFlip: true
+    rpiCameraVFlip: true
 mediamtx_users:
   - user: frigate
     pass: "{{ vault_mediamtx_passwords.frigate }}"
