--- a/inventory/host_vars/rb5009/ports.yml
+++ b/inventory/host_vars/rb5009/ports.yml
@@ -1,13 +1,5 @@
 ---
 
-mt_bonds:
-  - name: bond_syno
-    mode: 802.3ad
-    slaves: ether3,ether4
-    transmit-hash-policy: layer-2-and-3
-    lacp-rate: 1sec
-    mtu: 9000
-
 mt_trunk_ports:
   - vlan: VM
     ports: [sfp-sfpplus1]
@@ -18,7 +10,7 @@ mt_trunk_ports:
   - vlan: PUBLIC
     ports: [ether6]
   - vlan: MGMT
-    ports: [sfp-sfpplus1]
+    ports: [sfp-sfpplus1, ether6]
   - vlan: SAN
     ports: [sfp-sfpplus1]
 
@@ -26,20 +18,22 @@ mt_access_ports:
   - vlan: GENERAL
     ports:
       - ether1
+      - ether3
+      - ether4
       - ether5
       - ether7
 
   - vlan: MGMT
     ports:
       - ether8
-      - bond_syno
 
 # !!! Do NOT add to bridge !!!
 mt_wan_port: ether2
 mt_bridge_ports:
-  - bond_syno
   - sfp-sfpplus1
   - ether1
+  - ether3
+  - ether4
   - ether5
   - ether6
   - ether7
