--- a/inventory/host_vars/webgw01/vars.yml
+++ b/inventory/host_vars/webgw01/vars.yml
@@ -3,6 +3,7 @@
 ansible_host: "{{ vault_ansible_host }}"
 ansible_host6: "{{ vault_ansible_host6 }}"
 ansible_user: "{{ vault_ansible_user }}"
+ansible_user_password: "{{ vault_ansible_user_password }}"
 ansible_become: true
 
 sys_timezone: "Etc/UTC"
