webgw01 SSH on WG

--- a/inventory/group_vars/localgw/vars.yml
+++ b/inventory/group_vars/localgw/vars.yml
@@ -1,5 +1,8 @@
 ---
 
+# gitlab-ssh is on 22, consider adding second IP for consistency with webgw01?
+ansible_port: 5622
+
 __host_ips_3:
   san: "{{ subnets.san[host_subnet] | ansible.utils.ipv4 | andrei.utils.ipaddr_concat(host_num) }}"
 
