--- a/inventory/host_vars/rompi/wireguard.yml
+++ b/inventory/host_vars/rompi/wireguard.yml
@@ -12,7 +12,7 @@ wireguard_dns_list:
 
 wireguard_mt_allowed_ips:
   - "{{ hostvars['rb5009'].wireguard_ip }}/32"
-  - "{{ hostvars['litr'].ansible_host }}/32"
+  - "{{ subnets.mt.webgw }}"
   - "{{ subnets.vm.loki }}"
   - "{{ subnets.vm.prom }}"
   - "{{ firewall_trusted_sources }}"
